
* SOLR-17419: An alternate ShardHandlerFactory is now available, ParallelHttpShardHandlerFactory,
  which may help reduce distributed-search latency in collections with many shards, especially
  when PKI is used between nodes. (Jason Gerlowski)

* SOLR-17382: Deprecate -a and -addlopts in favour of --jvm-opts for passing options into the JVM in bin/solr.   (Eric Pugh, Christos Malliaridis)

Optimizations
---------------------
* SOLR-14985: Solrj CloudSolrClient with Solr URLs had serious performance regressions (since the
  beginning?) in which its collection state cache was not being used, resulting in many extra
  requests to Solr for cluster information. (Aparna Suresh, shalin, David Smiley)

* SOLR-17102: The VersionBucket indexing lock mechanism was replaced with something just as fast yet
  that which consumes almost no memory, saving 1MB of memory per SolrCore.  (David Smiley)

* SOLR-17381: Make CLUSTERSTATUS request configurable to improve performance by allowing retrieval of specific information,
  reducing unnecessary data fetching. (Aparna Suresh, David Smiley)

* SOLR-17396: Reduce thread contention in ZkStateReader.getCollectionProperties(). (Aparna Suresh, David Smiley, Paul McArthur)

* SOLR-17408: COLSTATUS command was fetching details remotely from replicas when this information
  wasn't asked for. (Mathieu Marie)

* SOLR-3913: Optimize PostTool to call just optimize when both commit and optimize requested. (Eric Pugh)

Bug Fixes
---------------------
* SOLR-12429: Uploading a configset with a symbolic link produces a IOException. Now a error message to user generated instead. (Eric Pugh)

* SOLR-17421: Fixed a rare case where overseer was stuck after a failure when changing overseer to honor the
  node role for preferred overseer. (Pierre Salagnac)

* SOLR-17416: Fixed ExportHandler bug that silently suppressed errors and returned partial results in some situations (hossman)
