@@ -357,7 +357,8 @@ public class SolrCLI implements CLIO {
   }
 
   /**
-   * Returns the value of the option with the given name, or the value of the deprecated option with
+   * Returns the value of the option with the given name, or the value of the deprecated option. If
+   * both values are null, then it returns the default value.
    */
   public static String getOptionWithDeprecatedAndDefault(
       CommandLine cli, String opt, String deprecated, String def) {
