@@ -109,6 +109,7 @@ public class PackageManagerCLITest extends SolrCloudTestCase {
 
     run(tool, new String[] {"--solr-url", solrUrl, "list-deployed", "question-answer"});
 
+    // Leaving -p in for --params to test the deprecated value continues to work.
     run(
         tool,
         new String[] {
@@ -164,7 +165,7 @@ public class PackageManagerCLITest extends SolrCloudTestCase {
               "question-answer",
               "--collections",
               "abc",
-              "-p",
+              "--params",
               "RH-HANDLER-PATH=" + rhPath
             });
       } else {
